--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
   shared_preferences: ^2.5.4
+  connectivity_plus: ^6.1.5
+  internet_connection_checker: ^3.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
